testing branch function

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         } else if (playerSelection === "scissors" && computerSelection === "paper") {
             message = 'You win - Scissors beats paper!';
         } else if (playerSelection === "paper" && computerSelection === "rock") {
-            message = 'You lose - Paper beats rock!';
+            message = 'You win - Paper beats rock!';
         } else if (playerSelection === "paper" && computerSelection === "scissors") {
             message = 'You lose - Scissors beats paper!';
         } 
