--- a/index.html
+++ b/index.html
@@ -1,4 +1,62 @@
-<script>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Rock Paper Scissors</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet"> 
+</head>
+<body>
+    <h1>Rock Paper Scissors!</h1>
+    <div id="buttons">        
+        <button type="button" id="rock" class="btn">Rock</button>
+        <button type="button" id="paper" class="btn">Paper</button>
+        <button type="button" id="scissors" class="btn">Scissors</button></div>
+    <div id="container"></div>
+</body>
+</html>
+
+<script>   
+    console.log(game());
+    
+    //event listener to call playRound function and store player selection
+    function game() {
+        let win = 0;
+        let playerSelection = '';
+        let playerWins = 0;
+        let computerWins = 0;
+        const container = document.querySelector('#container');
+        const content = document.createElement('div');
+        const result = document.createElement('div');
+        const buttons = document.querySelectorAll('button');
+        buttons.forEach((button) => {
+            button.addEventListener('click', () => {
+                playerSelection = button.id;
+                win = playRound(playerSelection);       
+                if (win === 1) {
+                    playerWins++;
+                } else if (win === 2) {
+                    computerWins++;
+                }    
+                content.textContent = `Wins: ${playerWins} Losses: ${computerWins}`;
+                content.classList.add("bold");
+                container.appendChild(content);
+                if (playerWins >= 5 || computerWins >= 5) {
+                    if (playerWins > computerWins) {
+                        result.textContent = `You won the game with ${playerWins} wins and ${computerWins} losses!`;
+                    } else {
+                        result.textContent = `You lost the game with ${playerWins} wins and ${computerWins} losses!`;
+                    }
+                    container.appendChild(result);
+                }
+            });
+        });
+    }
+
     //randomly return "rock", "paper", or "scissors"
     function computerPlay() {
         //initialize n as a random integer between 1 and 3.
@@ -16,52 +74,42 @@
                 computerSelection = "scissors";
                 break;
             default:
-                console.log("How did this happen?");
+                console.log("ERROR");
         }
         return computerSelection;
     }
 
     //play a single round of rock paper scissors using the selections from both the player and the computer
-    function playRound() {
-        let message = "";
-        let playerSelection = window.prompt("Please enter 'rock', 'paper', or 'scissors.'");
+    //print div message for every potential outcome and count win/lose
+    function playRound(rockPaperOrScissors) {
+        let playerSelection = rockPaperOrScissors;
         let computerSelection = computerPlay();
+        //tie = 0, win = 1, lose = 2
+        let win = 0;
+        const container = document.querySelector('#container');
+        const content = document.createElement('div');
         if (playerSelection === computerSelection) {
-            message = `You both answered ${playerSelection}, so it's a tie!`;
+            content.textContent = `You both chose ${playerSelection}, so it's a tie!`;
         } else if (playerSelection === "rock" && computerSelection === "paper") {
-            message = 'You lose - Paper beats rock!';
+            content.textContent = `You chose ${playerSelection} and the computer chose ${computerSelection}. You lose - Paper beats rock!`;
+            win = 2;
         } else if (playerSelection === "rock" && computerSelection === "scissors") {
-            message = 'You win - Rock beats scissors!';
+            content.textContent = `You chose ${playerSelection} and the computer chose ${computerSelection}.You win - Rock beats scissors!`;
+            win = 1;
         } else if (playerSelection === "scissors" && computerSelection === "rock") {
-            message = 'You lose - Rock beats scissors!';
+            content.textContent = `You chose ${playerSelection} and the computer chose ${computerSelection}. You lose - Rock beats scissors!`;
+            win = 2;
         } else if (playerSelection === "scissors" && computerSelection === "paper") {
-            message = 'You win - Scissors beats paper!';
+            content.textContent = `You chose ${playerSelection} and the computer chose ${computerSelection}. You win - Scissors beats paper!`;
+            win = 1;
         } else if (playerSelection === "paper" && computerSelection === "rock") {
-            message = 'You lose - Paper beats rock!';
+            content.textContent = `You chose ${playerSelection} and the computer chose ${computerSelection}. You win - Paper beats rock!`;
+            win = 1;
         } else if (playerSelection === "paper" && computerSelection === "scissors") {
-            message = 'You lose - Scissors beats paper!';
-        } 
-        return message;
-    }
-
-    //calls the playRound function and tracks a best of five rounds game, reporting a winner at the end of the overall game
-    function game() {
-        let playerWins = 0;
-        let computerWins = 0;
-        while (playerWins < 3 && computerWins < 3) {
-            let currentRound = playRound();
-            console.log(currentRound);
-            if (currentRound.includes("win")) {
-                playerWins++;
-            } else if (currentRound.includes("lose")) {
-                computerWins++;
-            } 
+            content.textContent = `You chose ${playerSelection} and the computer chose ${computerSelection}. You lose - Scissors beats paper!`;
+            win = 2;
         }
-        if (playerWins > computerWins) {
-            console.log(`You won the game with ${playerWins} wins and ${computerWins} losses!`)
-        } else {
-            console.log(`You lost the game with ${playerWins} wins and ${computerWins} losses!`)
-        }
+        container.appendChild(content);
+        return win;
     }
-    console.log(game());
 </script>
